--- a/delivery/templates/delivery/store.html
+++ b/delivery/templates/delivery/store.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>store Management</title>
     {% load static %}
+    <link rel="stylesheet" href="{% static 'delivery/admin.css' %}">
     <script src="{% static 'delivery/de.js' %}"></script>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="nav-logo">
+                <img src="{% static 'delivery/logo.png' %}" alt="NB Logo" class="logo">
+            </div>  
+            <div class="nav-right">
+                <a href="#" class="nav-link">Log out</a>
+            </div>    
+        </nav>
+    </header>
     <form method="post" action="{% url 'stock_view' p.id %}">
         {% csrf_token %}
         <label>Name: </label>
@@ -58,6 +69,15 @@
         </tr>
         {% endfor %}
     </table>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <p>© 2025 My Store | Designed with ❤️ by Your Team And NB</p>
+            <ul class="footer-links">
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+    </footer>    
 </body>
 </html>
