--- a/delivery/templates/delivery/cart.html
+++ b/delivery/templates/delivery/cart.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'delivery/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'delivery/cart.css' %}">
 </head>
 <body>
     <div  class="cart-container">
