--- a/delivery/templates/delivery/orders.html
+++ b/delivery/templates/delivery/orders.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'delivery/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'delivery/order.css' %}">
     <title>Order Summary</title>
 </head>
 <body>
-    <h1>Thank you for your order, {{ userid }}!</h1>
+    <div>
+        <h1>Thank you for your order, {{ p.username }}!</h1>
+        <h1>you will recive a mail to, {{ p.email }}!</h1>
 
 
-    <h2>Delivery Address</h2>
-    <p>{{ customer.address }}</p>
-
-    <p>Your order will be delivered to this location shortly. Thank you for choosing Meal Mate!</p>
-
-    {% if cart_items %}
-    <a href="{% url 'home' p.id %}"  class="back-home">Back to home</a>
-    {% endif %}
+        <h2>Delivery Address</h2>
+        <p>{{ p.address }}</p>
+    
+        <p>Your order will be delivered to this location shortly. Thank you for choosing Onestop!</p>
+        <a href="{% url 'home' p.id %}"  class="back-home">Back to home</a>
+        {% if cart_items %}
+        <a href="{% url 'home' p.id %}"  class="back-home">Back to home</a>
+        {% endif %}
+    </div>
+    
 </body>
 </html>
