--- a/delivery/templates/delivery/checkout.html
+++ b/delivery/templates/delivery/checkout.html
@@ -25,6 +25,8 @@
     <h2>Total: ${{ total_price }}</h2>
 
     <button id="rzp-button">Pay with Razorpay</button>
+
+    <a href="{% url 'home' p.id %}"  class="back-home">Back to home</a>
     {% endif %}
 
     <script>
@@ -38,7 +40,7 @@
             "handler": function (response) {
                 alert("Payment Successful!");
                 // Redirect to the orders page
-                window.location.href = "{% url 'orderss' p.id %}";
+                window.location.href = "{% url 'orderss' p %}";
             },
             "prefill": {
                 "name": "{{ p.username }}",
